:adhesive_bandage: fix z-index nav

--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,6 +1,7 @@
 header{
   height: 80px;
   width: 100%;
+  z-index: 50;
   top: 0;
   background-color: $blue_400;
   border-radius: 0 0 20px 20px;
